@@ -16,6 +16,8 @@
 13. Re-add option to save lyrics in music folder.
 14. Show Original Year in context view metadata.
 15. Add --fullscreen command-line option to start fullscreen.
+16. For genres listed in "Composer Support" tweak, shown composer instead of
+    atist in context view and toolbar.
 
 2.3.3
 -----
